fixed reviewService and added new asynchronous operations